# CMetrics

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  cmetrics  cmetrics.py  configure.ac
common/: cmts-autogen.sh
debian/: changelog  control  rules
halstead/: Makefile.am  c_halsfilt.l  halstead
kdsi/: Makefile.am  kdsi.c
mccabe/: Makefile.am  mccabe
utils/: Makefile.am  argfiles.c  argfiles.h  bdr.h  stripcom.c  stripstr.c
